--- a/public/assets/stylesheets/less/files.less
+++ b/public/assets/stylesheets/less/files.less
@@ -125,18 +125,29 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
     .icon('after', "checkbox-indeterminate", 'clickable', 16, 4);
 }
 
+
+#file_edit_window, #file_details_window {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+
+
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
     /* mobile view: */
     #file_aside, #folder_aside {
         display: block;
         
-        img {
-            width: 30%;
-            height: 100%;
-            max-height: 10em;
-            float:left;
-            margin-right: 1em;
+        div.FileIcon, div.FolderIcon {
+            img {
+                width: 30%;
+                height: 100%;
+                max-height: 10em;
+                float:left;
+                margin-right: 1em;
+            }
         }
         
         h3 {
@@ -159,51 +170,7 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
         max-width: 100%;
     }
     
-}
-
-@media screen and (min-width: 801px) {
-    /* desktop view: */
-    
     #file_edit_window, #file_details_window {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        align-content: flex-start;
-    }
-
-    #file_aside, #folder_aside {
-        width: calc(30% - 10px);
-        max-width: calc(30% - 10px);
-        overflow: hidden;
-        
-        img {
-            margin-top: 15%;
-            margin-left: 20%;
-            width: 60%;
-            max-height: 16em;
-            height: 100%;
-        }
-        
-        h3 {
-            text-align: center;
-            font-size: 1.1em;
-        }
-    }
-    
-    #file_management_forms, #preview_container {
-        width: calc(70% - 10px);
-        max-width: calc(70% - 10px);
-        
-        .file_preview {
-            max-width: 100%;
-        }
-    }
-    
-    
-}
-
-@media screen and (max-width: 800px) {
-    #file_edit_window {
         flex-direction: column;
     }
 
@@ -216,4 +183,39 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span {
         width: 100%;
         max-width: none;
     }
+    
+}
+
+@media screen and (min-width: 801px) {
+    /* desktop view: */
+    
+    #file_aside, #folder_aside {
+        width: calc(30% - 10px);
+        max-width: calc(30% - 10px);
+/*         overflow: hidden; */
+        
+        div.FileIcon, div.FolderIcon {
+            img {
+                margin-left: 20%;
+                width: 60%;
+                max-height: 16em;
+                height: 100%;
+            }
+        }
+        
+        h3 {
+            text-align: center;
+            font-size: 1.1em;
+        }
+    }
+    
+    #file_management_forms, div#preview_container {
+        width: calc(70% - 10px);
+        max-width: calc(70% - 10px);
+        
+        .file_preview {
+            max-width: 100%;
+        }
+    }
+    
 }
