--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -5902,6 +5902,13 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
   vertical-align: text-top;
   width: 16px;
 }
+#file_edit_window,
+#file_details_window {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
+}
 /* for file/edit and folder/edit only: */
 @media screen and (max-width: 800px) {
   /* mobile view: */
@@ -5909,8 +5916,10 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
   #folder_aside {
     display: block;
   }
-  #file_aside img,
-  #folder_aside img {
+  #file_aside div.FileIcon img,
+  #folder_aside div.FileIcon img,
+  #file_aside div.FolderIcon img,
+  #folder_aside div.FolderIcon img {
     width: 30%;
     height: 100%;
     max-height: 10em;
@@ -5934,25 +5943,32 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
   .file_preview {
     max-width: 100%;
   }
+  #file_edit_window,
+  #file_details_window {
+    flex-direction: column;
+  }
+  #file_aside,
+  #folder_aside {
+    width: 100%;
+    max-width: none;
+  }
+  #file_management_forms {
+    width: 100%;
+    max-width: none;
+  }
 }
 @media screen and (min-width: 801px) {
   /* desktop view: */
-  #file_edit_window,
-  #file_details_window {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    align-content: flex-start;
-  }
   #file_aside,
   #folder_aside {
     width: calc(30% - 10px);
     max-width: calc(30% - 10px);
-    overflow: hidden;
+    /*         overflow: hidden; */
   }
-  #file_aside img,
-  #folder_aside img {
-    margin-top: 15%;
+  #file_aside div.FileIcon img,
+  #folder_aside div.FileIcon img,
+  #file_aside div.FolderIcon img,
+  #folder_aside div.FolderIcon img {
     margin-left: 20%;
     width: 60%;
     max-height: 16em;
@@ -5964,27 +5980,13 @@ input.document-checkbox[type="checkbox"]:indeterminate + label span::after {
     font-size: 1.1em;
   }
   #file_management_forms,
-  #preview_container {
+  div#preview_container {
     width: calc(70% - 10px);
     max-width: calc(70% - 10px);
   }
   #file_management_forms .file_preview,
-  #preview_container .file_preview {
+  div#preview_container .file_preview {
     max-width: 100%;
-  }
-}
-@media screen and (max-width: 800px) {
-  #file_edit_window {
-    flex-direction: column;
-  }
-  #file_aside,
-  #folder_aside {
-    width: 100%;
-    max-width: none;
-  }
-  #file_management_forms {
-    width: 100%;
-    max-width: none;
   }
 }
 /* classes for the evaluation modules in Stud.IP ---------------------------- */
